--- a/Neural_Networks/convolutional_neural_network_MNIST_digits.ipynb
+++ b/Neural_Networks/convolutional_neural_network_MNIST_digits.ipynb
@@ -30,6 +30,8 @@
     "# Libraries\n",
     "import os\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "# Set TensorFlow log level to suppress warnings and info messages\n",
     "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '3'\n",
@@ -127,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "id": "0c0cc3db",
    "metadata": {},
    "outputs": [],
@@ -176,7 +178,7 @@
     "model.fit(X_train, \n",
     "          y_train, \n",
     "          batch_size=batch_size, \n",
-    "          epochs=epochs, \n",
+    "          epochs=epochs,\n",
     "          validation_split=0.1)"
    ]
   },
