--- a/Neural_Networks/multi_layer_perceptron_model_apartment_data.ipynb
+++ b/Neural_Networks/multi_layer_perceptron_model_apartment_data.ipynb
@@ -39,16 +39,16 @@
    "source": [
     "# Libraries\n",
     "import os\n",
-    "import numpy as np\n",
     "import pandas as pd\n",
-    "from sklearn import tree\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.metrics import r2_score\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
-    "from sklearn.neural_network import MLPRegressor\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '2'\n",
+    "# Set TensorFlow log level to suppress warnings and info messages\n",
+    "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '3'\n",
+    "\n",
+    "from tensorflow import keras\n",
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.layers import Dense, Dropout\n",
     "\n",
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 244,
    "id": "6d76a5cc",
    "metadata": {},
    "outputs": [],
@@ -200,19 +200,18 @@
     "# Define the number of features\n",
     "num_features = X_train.shape[1]\n",
     "\n",
-    "# Define the model with dropout\n",
-    "model = Sequential([\n",
-    "    Dense(64, activation='relu', input_shape=(num_features,)),  # Hidden layer 1\n",
-    "    Dropout(0.2),                                               # Dropout layer 1\n",
-    "    Dense(32, activation='relu'),                               # Hidden layer 2\n",
-    "    Dropout(0.2),                                               # Dropout layer 2\n",
-    "    Dense(16, activation='relu'),                               # Hidden layer 3\n",
-    "    Dropout(0.2),                                               # Dropout layer 3\n",
-    "    Dense(1)                                                    # Output layer\n",
+    "# Define the model\n",
+    "model = keras.Sequential([\n",
+    "    keras.Input(shape=(num_features,)),\n",
+    "    keras.layers.Dense(256, activation='relu'),\n",
+    "    keras.layers.Dense(128, activation='relu'),\n",
+    "    keras.layers.Dense(64, activation='relu'),\n",
+    "    keras.layers.Dense(32, activation='relu'),\n",
+    "    keras.layers.Dense(1),\n",
     "])\n",
     "\n",
     "# Compile the model\n",
-    "model.compile(optimizer='adam', loss='mse', metrics=['mae'])\n",
+    "model.compile(optimizer='adam', loss='mse', metrics=['mape'])\n",
     "\n",
     "# Train the model\n",
     "history = model.fit(X_train, \n",
@@ -220,14 +219,14 @@
     "                    epochs=100, \n",
     "                    validation_split=0.20, \n",
     "                    batch_size=32,\n",
-    "                    verbose=1)\n",
-    "\n",
-    "# Evaluate the model on the test set using the mean absolute error (MAE)\n",
-    "test_loss, test_mae = model.evaluate(X_test, y_test)\n",
-    "# print(f\"Test MAE: {test_mae}\")\n",
+    "                    verbose=0)\n",
     "\n",
     "# Predict the response for test dataset\n",
     "y_pred = model.predict(X_test)\n",
+    "\n",
+    "# Evaluate the model on the test set using the mean absolute error (MAPE)\n",
+    "test_loss, test_mape = model.evaluate(X_test, y_test)\n",
+    "print(f\"\\nMAPE: {test_mape:.2f}\")\n",
     "\n",
     "# Calculate R2 score\n",
     "r2 = r2_score(y_test, y_pred)\n",
@@ -259,10 +258,10 @@
     "plt.show()\n",
     "\n",
     "# Plot training & validation MAE values\n",
-    "plt.plot(history.history['mae'])\n",
-    "plt.plot(history.history['val_mae'])\n",
-    "plt.title('Model MAE')\n",
-    "plt.ylabel('MAE')\n",
+    "plt.plot(history.history['mape'])\n",
+    "plt.plot(history.history['val_mape'])\n",
+    "plt.title('Model MAPE')\n",
+    "plt.ylabel('MAPE')\n",
     "plt.xlabel('Epoch')\n",
     "plt.legend(['Train', 'Validation'], loc='upper right')\n",
     "plt.show()"
