--- a/Neural_Networks/convolutional_neural_network_MNIST_digits.ipynb
+++ b/Neural_Networks/convolutional_neural_network_MNIST_digits.ipynb
@@ -29,12 +29,14 @@
    "source": [
     "# Libraries\n",
     "import os\n",
+    "import logging\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Set TensorFlow log level to suppress warnings and info messages\n",
-    "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '3'\n",
+    "# Set TensorFlow log level to suppress warnings\n",
+    "logging.disable(logging.WARNING)\n",
+    "os.environ[\"TF_CPP_MIN_LOG_LEVEL\"] = \"3\"\n",
     "\n",
     "# TensorFlow and Keras\n",
     "from tensorflow import keras\n",
@@ -129,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "0c0cc3db",
    "metadata": {},
    "outputs": [],
