--- a/Neural_Networks/multi_layer_perceptron_model_apartment_data.ipynb
+++ b/Neural_Networks/multi_layer_perceptron_model_apartment_data.ipynb
@@ -39,14 +39,16 @@
    "source": [
     "# Libraries\n",
     "import os\n",
+    "import logging\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.metrics import r2_score\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "# Set TensorFlow log level to suppress warnings and info messages\n",
-    "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '3'\n",
+    "# Set TensorFlow log level to suppress warnings\n",
+    "logging.disable(logging.WARNING)\n",
+    "os.environ[\"TF_CPP_MIN_LOG_LEVEL\"] = \"3\"\n",
     "\n",
     "from tensorflow import keras\n",
     "from tensorflow.keras.models import Sequential\n",
@@ -128,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 17,
    "id": "6d76a5cc",
    "metadata": {},
    "outputs": [],
